--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,9 @@
 		body {
 			width: 550px;
 			font-family: "Arial Unicode MS", "DejaVu Sans", Symbola, Quivira, "Segoe UI Symbol", UniversaliaPlus;
+			background-color: black;
+			border-radius: 5px;
+			margin: 5px;
 		}
 
 		.slidecontainer {
@@ -51,10 +54,12 @@
 			width: 40px;
 			padding-left: 0px;
 			padding-right: 0px;
+			background-color: green;
+			color: whitesmoke;
 		}
 
 		button:hover {
-			background-color: lightgray;
+			background-color: lightgreen;
 		}
 
 		button .small {
@@ -65,7 +70,7 @@
 
 		.timeBox {
 			position: absolute;
-			top: 9px;
+			top: 7px;
 			left: 13px;
 		}
 
@@ -75,6 +80,7 @@
 			border: 1px solid;
 			margin: 5px 0 5px;
 			cursor: pointer;
+			background-color: white;
 		}
 
 		.timespan span {
@@ -131,8 +137,9 @@
 				<input type="checkbox" id="cbox-smooth-forward" checked>
 				<label for="cbox-smooth-forward">Smooth forward</label>
 			</div>
-			<div style="float:right">
-				<button id="btnSuspendTabs" style="width: auto;">Suspend tabs</button>
+			<div style="display:flex;float: right; height: 19px; gap: 3px">
+				<button id="btnSuspendTabs" style="width: 90px;">Suspend tabs</button>
+				<button id="btnSettings" style="width:22px;padding:0;font-size: x-small;">🛠</button>				
 			</div>
 		</div>
 	</div>
